k8s/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app
  namespace: jv-web
spec:
  selector:
    app: django-app
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
